--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,25 @@
 version: '3.8'
 
 services:
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "80:80"
+    depends_on:
+      - app
+    restart: always
+    deploy:
+      resources:
+        limits:
+          cpus: '0.3'
+          memory: 256M
+
   app:
     build: .
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     environment:
       - NODE_ENV=production
       - MONGODB_URI=mongodb://mongo:27017/arabotiq-marketing
@@ -22,8 +37,8 @@ services:
   mongo:
     image: mongo:latest
     command: mongod --wiredTigerCacheSizeGB 0.25
-    ports:
-      - "27017:27017"
+    expose:
+      - "27017"
     volumes:
       - mongo-data:/data/db
     restart: always
