--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "cross-env TEST_PORT=3001 jest --testEnvironment=node --forceExit"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "chart.js": "^4.3.3",
@@ -18,16 +19,11 @@
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
     "moment-hijri": "^2.1.2",
-    "mongoose": "^8.13.0",
+    "mongoose": "^7.4.3",
     "openai": "^4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "stripe": "^12.18.0",
-    "tailwindcss": "^3.3.3"
+    "stripe": "^12.18.0"
   },
   "devDependencies": {
-    "axios": "^1.8.4",
     "cross-env": "^7.0.3",
     "eslint": "^8.47.0",
     "jest": "^29.7.0",
